# nodemcu-esp32-firmware

./: .gitmodules  LICENSE  PROTOCOL.md  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  adapter.c  ble_ctl.c  ble_hack.c  comm.c  crypto.c  dispatch.c  hci.c  hci.h  helpers.c  main.c  rxqueue.c
main/inc/: adapter.h  ble_ctl.h  ble_hack.h  comm.h  crypto.h  dispatch.h  helpers.h  rxqueue.h
main/protocol/: ble.pb.c  ble.pb.h  device.pb.c  device.pb.h  generic.pb.c  generic.pb.h  whacky.c  whacky.h  whacky.pb.c  whacky.pb.h  whad.c  whad.h  whad.pb.c  whad.pb.h
main/protocol/ble/: ble.pb.c  ble.pb.h
