idf_component_register(
    SRCS
    "adapter.c"
    "comm.c"
    "crypto.c"
    "dispatch.c"
    "helpers.c"
    "main.c"
    "misc.c"
    "peer.c"
    "rxqueue.c"
    "ble_hack.c"
    "nanopb/pb_common.c"
    "nanopb/pb_decode.c"
    "nanopb/pb_encode.c"
    "protocol/device.pb.c"
    "protocol/ble/ble.pb.c"
    "protocol/zigbee/zigbee.pb.c"
    "protocol/generic.pb.c"
    "protocol/whad.pb.c"
    "protocol/whad.c"
    INCLUDE_DIRS "." "nanopb"
)
