idf_component_register(
    SRCS
    "adapter.c"
    "comm.c"
    "crypto.c"
    "dispatch.c"
    "helpers.c"
    "main.c"
    "misc.c"
    "peer.c"
    "rxqueue.c"
    "ble_hack.c"
    "nanopb/pb_common.c"
    "nanopb/pb_decode.c"
    "nanopb/pb_encode.c"
    "protocol/device.pb.c"
    "protocol/ble/ble.pb.c"
    "protocol/zigbee/zigbee.pb.c"
    "protocol/unifying/unifying.pb.c"
    "protocol/phy/phy.pb.c"
    "protocol/esb/esb.pb.c"
    "protocol/generic.pb.c"
    "protocol/whad.pb.c"
    "protocol/whad.c"
    "tinycrypt/source/aes_decrypt.c"
    "tinycrypt/source/aes_encrypt.c"
    "tinycrypt/source/cbc_mode.c"
    "tinycrypt/source/ccm_mode.c"
    "tinycrypt/source/cmac_mode.c"
    "tinycrypt/source/ctr_mode.c"
    "tinycrypt/source/ctr_prng.c"
    "tinycrypt/source/ecc_dh.c"
    "tinycrypt/source/ecc_dsa.c"
    "tinycrypt/source/ecc_platform_specific.c"
    "tinycrypt/source/ecc.c"
    "tinycrypt/source/hmac_prng.c"
    "tinycrypt/source/hmac.c"
    "tinycrypt/source/sha256.c"
    "tinycrypt/source/utils.c"
    INCLUDE_DIRS "." "nanopb" "inc"
)
